test/failing/failing_if_else.c
int main()
{
    int a = 5, b = 0;
    else
    {
        b = b - a;
    }
    if (a > b)
    {
        a = a - b;
    }
}
